--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,41 @@
     transform: rotate(360deg);
   }
 }
+
+.img{
+
+  width:200px;
+  height:200px;
+  /* z-index: -1; */
+}
+
+
+.slider{
+
+  display :flex;
+ margin:5px;
+ width: 100%; 
+z-index: -1;
+
+ 
+
+}
+
+.slider img{
+
+overflow:hidden;
+    height:350px;
+      border:4px solid transparent;
+      border-radius:4px;
+     
+  width:100%;
+  box-shadow:rgb(0 0 0 / 69%) 0px 26px 30px -10px,
+  rgb(0 0 0 / 73%) 0px 16px 10px -10px;
+  transition:300ms;
+ 
+  
+}
+
+.slider img :hover{
+  border:4px solid rgba(249 ,249, 249 ,0.8);
+}
